test/files/neg/reify_metalevel_breach_-1_refers_to_0_b.scala
import scala.reflect.runtime.universe._
import scala.reflect.runtime.{universe => ru}
import scala.reflect.runtime.{currentMirror => cm}
import scala.tools.reflect.ToolBox

object Test extends App {
  val x = 2
  val code = reify{
    {
      val inner = reify{reify{x}}
      inner.splice
    }.splice
  }

  val toolbox = cm.mkToolBox()
  val evaluated = toolbox.eval(code.tree)
  println("evaluated = " + evaluated)
}